2004-10-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnr/*: Move some things from nr-matrix-ops.h to new files.

	* src/libnr/nr-point-fns.h, src/libnr/nr-point-fns.cpp:
	  New function is_zero.  Move is_unit_vector here
	  (was private to sp-spiral.cpp).

	* src/display/bezier-utils-test.cpp: Disable a test, replacing with a
	  todo printf and adding a comment explaining.

2004-10-22  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/pencil-context.cpp: Ensure that data points array p is uniqued
	  and contains no NaNs. 

	* src/libnr/nr-point-fns.cpp (LInfty): Fix bug with NaN coordinates:
	  return NaN (rather than unspecified behaviour).
	* src/libnr/nr-point-fns-test.cpp: Add test cases for L1,L2,LInfty
	  handling of NaN.

	* src/pencil-context.cpp: Fix bug: undesirable interactions between
	  snapping and snap-to-anchor.

2004-10-21  MenTaLguY  <mental@rydia.net>

	* src/desktop.cpp: SPDesktop::currentRoot() should pull from
	  the current layer hierarchy just like SPDesktop::currentLayer();
	  doubly so, since currently when switching documents the layer hierarchy
	  is updated before the document is switched

	* src/util/Makefile_insert, src/util/copy-list.h: add list copy thingy

	* src/util/list.h: add rest()

	* src/util/reverse-list.h: bug fixes to reverse_list_in_place()

	* src/widgets/layer-selector.cpp, src/widgets/layer-selector.h:
	  more work on layer selector

2004-10-21  Carl Hetherington  <inkscape@carlh.net>

	* src/livarot/Path.cpp, src/livarot/Path.h,
	src/livarot/PathConversion.cpp, src/livarot/PathCutting.cpp,
	src/livarot/PathOutline.cpp, src/livarot/PathSimplify.cpp,
	src/livarot/ShapeMisc.cpp: excise separate path description data
	structure.

	* src/livarot/Path.h, src/livarot/Path.cpp,
	src/livarot/PathConversion.cpp, src/livarot/PathCutting.cpp,
	src/livarot/PathOutline.cpp, src/livarot/PathSimplify.cpp,
	src/livarot/ShapeMisc.cpp, src/livarot/livarot-forward.h: move