@@ -23,6 +23,7 @@ enum {
 	/* SPObject */
 	SP_ATTR_ID,
 	SP_ATTR_INKSCAPE_COLLECT,
+	SP_ATTR_INKSCAPE_LABEL,
 	/* SPItem */
 	SP_ATTR_TRANSFORM,
 	SP_ATTR_SODIPODI_INSENSITIVE,
