@@ -1,3 +1,11 @@
+2004-10-23  MenTaLguY  <mental@rydia.net>
+
+	* src/attributes.cpp, src/attributes.h, src/sp-object.cpp, src/sp-object.h:
+	  add inkscape:label attribute
+
+	* src/sp-offset.cpp, src/sp-shape.h:
+	  derive SPShape from SPItem the C++ way
+
 2004-10-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/libnr/*: Move some things from nr-matrix-ops.h to new files.
